--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 </head>
 
 <body>
+    <header>
+        <section id="introducao">
     <h1> Tecnologia no campo: Avanço e Influencia</h1>
+    </header>
     <p>A tecnologia tem transformado o campo, trazendo avanços como agricultura de precisão, automação, biotecnologia e
         uso de dados (Big Data, IoT). Essa evolução resulta em maior produtividade, uso mais eficiente de recursos
         (água, insumos), redução de custos, melhor tomada de decisão e práticas mais sustentáveis. Em suma, a tecnologia
         moderniza a produção agrícola, tornando-a mais eficiente e controlada, apesar de demandar investimento e
         capacitação.</p>
         <img src="img/james-baltz-jAt6cN6zl8M-unsplash.jpgs" alt="" srcset="">
+    </section>
 </body>
 
 </html>
