--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         (água, insumos), redução de custos, melhor tomada de decisão e práticas mais sustentáveis. Em suma, a tecnologia
         moderniza a produção agrícola, tornando-a mais eficiente e controlada, apesar de demandar investimento e
         capacitação.</p>
-        <img src="img/james-baltz-jAt6cN6zl8M-unsplash.jpgs" alt="" srcset="">
+        <img src="img/james-baltz-jAt6cN6zl8M-unsplash.jpg" alt="" title="A imagem mostra vários pulverizadores aplicando defensivos agrícolas. Fonte: Unsplash, 2025." srcset="">
     </section>
 </body>
 
