--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agrinho 2025/ Conexao campo-cidade</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -17,8 +18,37 @@
         (água, insumos), redução de custos, melhor tomada de decisão e práticas mais sustentáveis. Em suma, a tecnologia
         moderniza a produção agrícola, tornando-a mais eficiente e controlada, apesar de demandar investimento e
         capacitação.</p>
-        <img src="img/james-baltz-jAt6cN6zl8M-unsplash.jpg" alt="" title="A imagem mostra vários pulverizadores aplicando defensivos agrícolas. Fonte: Unsplash, 2025." srcset="">
+        <img src="img/image.png" class="imagem-introducao" alt="" title="A imagem mostra pulverizador aplicando defensivos agrícolas. Fonte: Unsplash, 2025."
+         srcset="">
     </section>
+</body>
+    </section>
+    <section id="desenvolvimento">
+        <h2>Da onde vem o que eu como?</h2>
+        <p>Segundo o G1 (2020), os agricultores familiares representam 67% dos produtores rurais do
+            Brasil e ocupam 77% das fazendas do país. Além disso, participam com um quarto de toda a produção
+            agropecuária nacional.</p>
+        <img src="img/no-one-cares-l_5MJnbrmrs-unsplash.jpg" class="imagem 2" alt=""
+            title="Imagem aérea de uma colheita mecanizada em andamento, com tratores operando em uma plantação de milho."
+            srcset="A imagem retrata a modernização do setor agrícola por meio da mecanização da colheita, evidenciada pelo uso de tratores e 
+            equipamentos especializados. Esse cenário reflete diretamente os avanços promovidos por instituições como a Embrapa (Empresa Brasileira de Pesquisa Agropecuária), que tem desempenhado papel fundamental no desenvolvimento e na disseminação de tecnologias voltadas à agricultura de precisão.
+            Segundo a Embrapa, a adoção de tecnologias no campo — como maquinários automatizados, sensores, sistemas de georreferenciamento e 
+            análise de dados — contribui para o aumento da produtividade, a redução de desperdícios e a sustentabilidade da produção agrícola. A colheita mecanizada, como a apresentada na imagem, é um exemplo claro de como a inovação tecnológica tem transformado práticas tradicionais, tornando o trabalho mais eficiente e menos dependente da força de trabalho intensiva.
+            Esse tipo de avanço não apenas melhora o desempenho econômico das propriedades rurais, como também contribui para 
+            a segurança alimentar e o uso racional dos recursos naturais, pilares centrais das pesquisas conduzidas pela Embrapa.">
+    </section>
+    <section id="referencias">
+        <h3>Referências</h3>
+        <p>Site Embrapa. Acesso em 17 de maio de 2025. </p>
+        <p> OpenAI. Textos gerados pelo ChatGPT sobre o tópico "Técnologia no campo: Avanço e Influência". 17 de maio de 2025,
+            https://chat.openai.com.</p>
+
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Desenvolvido por Marcus Vinicius</p>
+    </footer>
+
 </body>
 
 </html>
