--- a/index.html
+++ b/index.html
@@ -11,43 +11,51 @@
 <body>
     <header>
         <section id="introducao">
-    <h1> Tecnologia no campo: Avanço e Influencia</h1>
+            <h1> Tecnologia no campo: Avanços e Influência</h1>
     </header>
     <p>A tecnologia tem transformado o campo, trazendo avanços como agricultura de precisão, automação, biotecnologia e
         uso de dados (Big Data, IoT). Essa evolução resulta em maior produtividade, uso mais eficiente de recursos
         (água, insumos), redução de custos, melhor tomada de decisão e práticas mais sustentáveis. Em suma, a tecnologia
         moderniza a produção agrícola, tornando-a mais eficiente e controlada, apesar de demandar investimento e
         capacitação.</p>
-        <img src="img/image.png" class="imagem-introducao" alt="" title="A imagem mostra pulverizador aplicando defensivos agrícolas. Fonte: Unsplash, 2025."
-         srcset="">
+    <img src="img/image.png" class="imagem-introducao" alt=""
+        title="A imagem mostra pulverizador aplicando defensivos agrícolas. Fonte: Unsplash, 2025." srcset="">
     </section>
 </body>
-    </section>
-    <section id="desenvolvimento">
-        <h2>Da onde vem o que eu como?</h2>
-        <p>Segundo o G1 (2020), os agricultores familiares representam 67% dos produtores rurais do
-            Brasil e ocupam 77% das fazendas do país. Além disso, participam com um quarto de toda a produção
-            agropecuária nacional.</p>
-        <img src="img/no-one-cares-l_5MJnbrmrs-unsplash.jpg" class="imagem 2" alt=""
-            title="Imagem aérea de uma colheita mecanizada em andamento, com tratores operando em uma plantação de milho."
-            srcset="A imagem retrata a modernização do setor agrícola por meio da mecanização da colheita, evidenciada pelo uso de tratores e 
-            equipamentos especializados. Esse cenário reflete diretamente os avanços promovidos por instituições como a Embrapa (Empresa Brasileira de Pesquisa Agropecuária), que tem desempenhado papel fundamental no desenvolvimento e na disseminação de tecnologias voltadas à agricultura de precisão.
-            Segundo a Embrapa, a adoção de tecnologias no campo — como maquinários automatizados, sensores, sistemas de georreferenciamento e 
-            análise de dados — contribui para o aumento da produtividade, a redução de desperdícios e a sustentabilidade da produção agrícola. A colheita mecanizada, como a apresentada na imagem, é um exemplo claro de como a inovação tecnológica tem transformado práticas tradicionais, tornando o trabalho mais eficiente e menos dependente da força de trabalho intensiva.
-            Esse tipo de avanço não apenas melhora o desempenho econômico das propriedades rurais, como também contribui para 
-            a segurança alimentar e o uso racional dos recursos naturais, pilares centrais das pesquisas conduzidas pela Embrapa.">
-    </section>
-    <section id="referencias">
-        <h3>Referências</h3>
-        <p>Site Embrapa. Acesso em 17 de maio de 2025. </p>
-        <p> OpenAI. Textos gerados pelo ChatGPT sobre o tópico "Técnologia no campo: Avanço e Influência". 17 de maio de 2025,
-            https://chat.openai.com.</p>
+</section>
+<section id="desenvolvimento">
+    <h2>Colheita Mecanizada: Eficiência, Tecnologia e Sustentabilidade no Campo</h2>
+    <img src="img/no-one-cares-l_5MJnbrmrs-unsplash.jpg" class="imagem2" alt=""
+        title="Imagem aérea de uma colheita mecanizada em andamento, com tratores operando em uma plantação de milho. Fonte: Unsplash, 2025.">
+    <p>A imagem acima retrata a modernização do setor agrícola por meio da mecanização da colheita, evidenciada pelo uso
+        de
+        tratores e
+        equipamentos especializados. Esse cenário reflete diretamente os avanços promovidos por instituições como a
+        Embrapa (Empresa Brasileira de Pesquisa Agropecuária), que tem desempenhado papel fundamental no desenvolvimento
+        e na disseminação de tecnologias voltadas à agricultura de precisão.
+        Segundo a Embrapa, a adoção de tecnologias no campo — como maquinários automatizados, sensores, sistemas de
+        georreferenciamento e
+        análise de dados — contribui para o aumento da produtividade, a redução de desperdícios e a sustentabilidade da
+        produção agrícola. A colheita mecanizada, como a apresentada na imagem, é um exemplo claro de como a inovação
+        tecnológica tem transformado práticas tradicionais, tornando o trabalho mais eficiente e menos dependente da
+        força de trabalho intensiva.
+        Esse tipo de avanço não apenas melhora o desempenho econômico das propriedades rurais, como também contribui
+        para
+        a segurança alimentar e o uso racional dos recursos naturais, pilares centrais das pesquisas conduzidas pela
+        Embrapa.</p>
+</section>
+<section id="referencias">
+    <h3>Referências</h3>
+    <p>Site Embrapa. Acesso em 17 de maio de 2025. </p>
+    <p> OpenAI. Textos gerados pelo ChatGPT sobre o tópico "Técnologia no campo: Avanço e Influência". 17 de maio de
+        2025,
+        https://chat.openai.com.</p>
 
-    </section>
+</section>
 
-    <footer>
-        <p>&copy; 2025 Desenvolvido por Marcus Vinicius</p>
-    </footer>
+<footer>
+    <p>&copy; 2025 Desenvolvido por Marcus Vinicius</p>
+</footer>
 
 </body>
 
